--- a/appgobarber/package.json
+++ b/appgobarber/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@types/react-native-vector-icons": "^6.4.6",
+    "@unform/core": "2.1.3",
+    "@unform/mobile": "2.1.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.3",
